[tool.poetry]
name = "gnn-uds-zhang"
version = "0.1.0"
description = ""
authors = ["Alexander Garzón <j.a.garzondiaz@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.5.0"
tensorflow-probability = "^0.24.0"
protobuf = "^5.28.0"
pystorms = "^1.0.0"
swmm-api = "^0.4.47"
matplotlib = "^3.9.2"
pymoo = "^0.6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
