[tool.poetry]
name = "gnn-uds-zhang"
version = "0.1.0"
description = ""
authors = ["Alexander Garzón <j.a.garzondiaz@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
tensorflow = "2.6.0"
keras = "2.6.0"
tensorflow_probability = "0.14.1"
spektral = "1.2.0"
protobuf = "3.20.0"
pystorms = "1.0.0"
swmm-api = "0.2.0.18.3"
matplotlib = "3.5.2"
pymoo = "0.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
